<resources>
    <string name="smitdev">oleh SmitDev Community</string>
    <string name="top">TextView berhasil di tampilkan</string>
    <string name="hello">Silahkan Klik Pilihan Anda</string>
    <string name="menu1">Bakso</string>
    <string name="menu2">Soto</string>
    <string name="menu3">Nasi Goreng</string>
    <string name="menu4">kepiting Goreng</string>
    <string name="opsi1">Iphone</string>
    <string name="opsi2">Ipad</string>
    <string name="opsi3">Android</string>
    <string name="opsi4">PC</string>
    <string name="opsi5">Notebook</string>
    <string name="hello_world">Contoh penggunaan widget DropDown</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">DropDown</string>
    <string name="menu">Menu yang dapat Anda pilih :</string>
</resources>
